@@ -1,5 +1,10 @@
 # vim: set noexpandtab:
 
+2012-10-14 Steve
+	* Added MET systematics to the MET Ref terms
+	* Fixed isAF2 flag usage in m_susyObj.SetElecTLV
+	* Tagging SusyCommon-00-00-44
+
 2012-10-03 Steve
 	* Added passTileErr method
 	* Added larError flag to ntuple
